<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/proxy_ip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/socks_proxy_ip"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/socks_proxy_ip"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/proxy_port"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/socks_proxy_port"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/socks_proxy_port"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/proxy_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/socks_proxy_user"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/socks_proxy_user"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/proxy_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/socks_proxy_password"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/socks_proxy_password"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:ems="3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Button
            android:id="@+id/set_proxy_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:text="@string/setting_ok"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/set_proxy_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/setting_cancel"
            android:textAllCaps="false" />
    </LinearLayout>
</LinearLayout>