<?xml version="1.0" encoding="utf-8"?>
<!--
  ~
  ~   Copyright 2020. Explore in HMS. All rights reserved.
  ~
  ~   Licensed under the Apache License, Version 2.0 (the "License");
  ~   You may not use this file except in compliance with the License.
  ~   You may obtain a copy of the License at
  ~
  ~   http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~   Unless required by applicable law or agreed to in writing, software
  ~   distributed under the License is distributed on an "AS IS" BASIS,
  ~   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~   See the License for the specific language governing permissions and
  ~   limitations under the License.
  ~
  -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <CheckBox
        android:id="@+id/check_up_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/video_bitrate_type" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/TextAppearance.Sandbox.Body1"
            android:text="@string/video_bitrate_init" />

        <EditText
            android:id="@+id/initBitrateEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="number"
            android:text="@string/zero" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/video_bitrate_width"
            style="@style/TextAppearance.Sandbox.Body1"
            android:textSize="12sp"/>

        <EditText
            android:id="@+id/widthEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="number"
            tools:text="0" />

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:text="@string/video_bitrate_height"
            style="@style/TextAppearance.Sandbox.Body1"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/heightEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:ems="10"
            android:inputType="number"
            tools:text="0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/ButtonAppearance.Sandbox.Normal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textAllCaps="false"
            android:text="@string/setting_ok" />

        <Button
            android:id="@+id/cancel_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            style="@style/ButtonAppearance.Sandbox.Normal"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:textAllCaps="false"
            android:text="@string/setting_cancel" />

    </LinearLayout>
</LinearLayout>