<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/server_country_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/server_country_limit"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:ems="3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <Button
            android:id="@+id/set_volume_bt_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/setting_ok" />

        <Button
            android:id="@+id/set_volume_bt_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/setting_cancel" />

    </LinearLayout>
</LinearLayout>